added client class